--- a/src/index.html
+++ b/src/index.html
@@ -369,9 +369,200 @@
 
     <section class="price">
         <div class="container">
-            
-        </div>
-    </section>
+            <h2 class="price__title">клубные карты</h2>
+            <ul class="price__tabs-first">
+                <li class="price_tab-first price_tab-first_active">
+                    <img src="icons/blok_tarifov-01.svg" alt="" class="price__icon">
+                    <div class="price__tab-descr">Arena Classic</div>
+                </li>
+                <li class="price_tab-first">
+                    <img src="icons/blok_tarifov-02.svg" alt="" class="price__icon">
+                    <div class="price__tab-descr">Arena Утро</div>
+                </li>
+                <li class="price_tab-first">
+                    <img src="icons/blok_tarifov-03.svg" alt="" class="price__icon">
+                    <div class="price__tab-descr">Arena Вечер</div>
+                </li>
+                <li class="price_tab-first">
+                    <img src="icons/blok_tarifov-04.svg" alt="" class="price__icon">
+                    <div class="price__tab-descr">Arena Семейная карта</div>
+                </li>
+                <li class="price_tab-first">
+                    <img src="icons/blok_tarifov-05.svg" alt="" class="price__icon">
+                    <div class="price__tab-descr">Arena 100 посещений</div>
+                </li>
+                <li class="price_tab-first">
+                    <img src="icons/blok_tarifov-06.svg" alt="" class="price__icon">
+                    <div class="price__tab-descr">Arena VIP</div>
+                </li>
+                <li class="price_tab-first">
+                    <img src="icons/blok_tarifov-07.svg" alt="" class="price__icon">
+                    <div class="price__tab-descr">Arena Гость</div>
+                </li>
+            </ul>
+
+            <div class="price__content price__content_active">
+                <div class="price__img">
+                    <img src="img/brecet.png" alt="">
+                </div>
+                <div class="price__info">
+                    <ul class="price__list">
+                        <li class="price__item">Безлимитный доступ во все зоны клуба с 07:00 до 01:00 по будням / с 08:00 до 00:00 по выходным</li>
+                        <li class="price__item">Многофункциональный браслет (по нему осуществляется вход в клуб, заезд на отдельную парковку, выбор шкафчика, оплата доп. услуг)</li>
+                        <li class="price__item">Более 25 групповых направлений - все групповые тренировки включены в клубную карту, в том числе сайкл, TRX и антигравити</li>
+                        <li class="price__item">2 анализа состава тела на профессиональном оборудовании TANITA</li>
+                        <li class="price__item">2 вводные тренировки в тренажерном зале и в зале групповых программ/зале единоборств</li>
+                        <li class="price__item">30 дней заморозки</li>
+                        <li class="price__item">2 полотенца (большое, маленькое)</li>
+                        <li class="price__item">Рассрочка на 3 платежа</li>
+                    </ul>
+                    <div class="price__value">36 000 руб.</div>
+                    <div class="price__buttons">
+                        <a href="" class="button button_price">Купить</a>
+                        <a href="" class="button button_price-nobg">Оформить кредит</a>
+                    </div>
+                </div>
+            </div>
+            <div class="price__content">
+                <div class="price__img">
+                    <img src="img/brecet.png" alt="">
+                </div>
+                <div class="price__info">
+                    <ul class="price__list">
+                        <li class="price__item">Безлимитный доступ во все зоны клуба с 07:00 до 16:00 по будням / с 08:00 до 14:00 по выходным</li>
+                        <li class="price__item">Многофункциональный браслет (по нему осуществляется вход в клуб, заезд на отдельную парковку, выбор шкафчика, оплата доп. услуг)</li>
+                        <li class="price__item">Более 25 групповых направлений - все групповые тренировки включены в клубную карту, в том числе сайкл, TRX и антигравити</li>
+                        <li class="price__item">2 анализа состава тела на профессиональном оборудовании TANITA</li>
+                        <li class="price__item">2 вводные тренировки в тренажерном зале и в зале групповых программ/зале единоборств</li>
+                        <li class="price__item">30 дней заморозки</li>
+                        <li class="price__item">2 полотенца (большое, маленькое)</li>
+                        <li class="price__item">Рассрочка на 3 платежа</li>
+                    </ul>
+                    <div class="price__value">30 000 руб.</div>
+                    <div class="price__buttons">
+                        <a href="" class="button button_price">Купить</a>
+                        <a href="" class="button button_price-nobg">Оформить кредит</a>
+                    </div>
+                </div>
+            </div>
+            <div class="price__content">
+                <div class="price__img">
+                    <img src="img/brecet.png" alt="">
+                </div>
+                <div class="price__info">
+                    <ul class="price__list">
+                        <li class="price__item">Безлимитный доступ во все зоны клуба с 21:00 до 01:00 по будням / с 21:00 до 00:00 по выходным</li>
+                        <li class="price__item">Многофункциональный браслет (по нему осуществляется вход в клуб, заезд на отдельную парковку, выбор шкафчика, оплата доп. услуг)</li>
+                        <li class="price__item">Более 25 групповых направлений - все групповые тренировки включены в клубную карту, в том числе сайкл, TRX и антигравити</li>
+                        <li class="price__item">2 анализа состава тела на профессиональном оборудовании TANITA</li>
+                        <li class="price__item">2 вводные тренировки в тренажерном зале и в зале групповых программ/зале единоборств</li>
+                        <li class="price__item">30 дней заморозки</li>
+                        <li class="price__item">2 полотенца (большое, маленькое)</li>
+                        <li class="price__item">Рассрочка на 3 платежа</li>
+                    </ul>
+                    <div class="price__value">13 000 руб.</div>
+                    <div class="price__buttons">
+                        <a href="" class="button button_price">Купить</a>
+                        <a href="" class="button button_price-nobg">Оформить кредит</a>
+                    </div>
+                </div>
+            </div>
+            <div class="price__content">
+                <div class="price__img">
+                    <img src="img/brecet.png" alt="">
+                </div>
+                <div class="price__info">
+                    <ul class="price__list">
+                        <li class="price__item">Безлимитный доступ во все зоны клуба с 07:00 до 01:00 по будням / с 08:00 до 00:00 по выходным</li>
+                        <li class="price__item">Многофункциональный браслет (по нему осуществляется вход в клуб, заезд на отдельную парковку, выбор шкафчика, оплата доп. услуг)</li>
+                        <li class="price__item">Более 25 групповых направлений - все групповые тренировки включены в клубную карту, в том числе сайкл, TRX и антигравити</li>
+                        <li class="price__item">4 анализа состава тела на профессиональном оборудовании TANITA</li>
+                        <li class="price__item">4 вводные тренировки в тренажерном зале и в зале групповых программ/зале единоборств</li>
+                        <li class="price__item">60 дней заморозки</li>
+                        <li class="price__item">2 полотенца (большое, маленькое)</li>
+                        <li class="price__item">Рассрочка на 3 платежа</li>
+                    </ul>
+                    <div class="price__value">64 000 руб.</div>
+                    <div class="price__buttons">
+                        <a href="" class="button button_price">Купить</a>
+                        <a href="" class="button button_price-nobg">Оформить кредит</a>
+                    </div>
+                </div>
+            </div>
+            <div class="price__content">
+                <div class="price__img">
+                    <img src="img/brecet.png" alt="">
+                </div>
+                <div class="price__info">
+                    <ul class="price__list">
+                        <li class="price__item">Безлимитный доступ во все зоны клуба с 07:00 до 01:00 по будням / с 08:00 до 00:00 по выходным</li>
+                        <li class="price__item">Многофункциональный браслет (по нему осуществляется вход в клуб, заезд на отдельную парковку, выбор шкафчика, оплата доп. услуг)</li>
+                        <li class="price__item">Более 25 групповых направлений - все групповые тренировки включены в клубную карту, в том числе сайкл, TRX и антигравити</li>
+                        <li class="price__item">2 анализа состава тела на профессиональном оборудовании TANITA</li>
+                        <li class="price__item">2 вводные тренировки в тренажерном зале и в зале групповых программ/зале единоборств</li>
+                        <li class="price__item">30 дней заморозки</li>
+                        <li class="price__item">2 полотенца (большое, маленькое)</li>
+                        <li class="price__item">Рассрочка на 3 платежа</li>
+                    </ul>
+                    <div class="price__value">30 000 руб.</div>
+                    <div class="price__buttons">
+                        <a href="" class="button button_price">Купить</a>
+                        <a href="" class="button button_price-nobg">Оформить кредит</a>
+                    </div>
+                </div>
+            </div>
+            <div class="price__content">
+                <div class="price__img">
+                    <img src="img/brecet.png" alt="">
+                </div>
+                <div class="price__info">
+                    <ul class="price__list">
+                        <li class="price__item">Безлимитный доступ во все зоны клуба с 07:00 до 01:00 по будням / с 08:00 до 00:00 по выходным</li>
+                        <li class="price__item">Многофункциональный браслет (по нему осуществляется вход в клуб, заезд на отдельную парковку, выбор шкафчика, оплата доп. услуг)</li>
+                        <li class="price__item">Более 25 групповых направлений - все групповые тренировки включены в клубную карту, в том числе сайкл, TRX и антигравити</li>
+                        <li class="price__item">Отдельная раздевалка с ограниченным доступом</li>
+                        <li class="price__item">Личный шкафчик и личная сейфовая ячейка</li>
+                        <li class="price__item">Отдельная парковка под шлагбаумом у клуба</li>
+                        <li class="price__item">Неограниченное количество анализа состава тела на профессиональном оборудовании TANITA</li>
+                        <li class="price__item">2 вводные тренировки в тренажерном зале и в зале групповых программ/зале единоборств</li>
+                        <li class="price__item">60 дней заморозки</li>
+                        <li class="price__item">Большие и маленькие полотенца в свободном доступе</li>
+                        <li class="price__item">Отдельная стойка с зеркалом и феном Dyson</li>
+                        <li class="price__item">Шампуни и гели от L'Occitane</li>
+                        <li class="price__item">Средства для личной гигиены и обуви</li>
+                        <li class="price__item">Бесплатная вода</li>
+                        <li class="price__item">50 000 руб. - депозит на услуги клуба</li>
+                    </ul>
+                    <div class="price__value">150 000 руб.</div>
+                    <div class="price__buttons">
+                        <a href="" class="button button_price">Купить</a>
+                        <a href="" class="button button_price-nobg">Оформить кредит</a>
+                    </div>
+                </div>
+            </div>
+            <div class="price__content">
+                <div class="price__img">
+                    <div class="price__item">Гостевой визит - это возможность стать полноправным членом фитнес-клуба ARENA на один день и оценить все преимущества самостоятельно</div>
+                    <img src="img/brecet.png" alt="">
+                </div>
+                <div class="price__info">
+                    <ul class="price__list">
+                        <li class="price__item">Тренажерный зал с премиум тренажёрами TechnoGym, Hammer Strength, Hoist</li>
+                        <li class="price__item">Более 25 групповых направлений (Силовые, танцевальные, единоборства, body&mind, TRX...). С расписанием вы можете ознакомиться в мобильном приложении.</li>
+                        <li class="price__item">Отдельная парковка в районе шиномонтажа «5 колесо»</li>
+                        <li class="price__item">Сайкл-студия RealRyder (единственные в Перми динамичные велотренажеры)</li>
+                        <li class="price__item">Сауна-Хаммам у девушек, финская сауна у мужчин</li>
+                        <li class="price__item">Солярий, кафе</li>
+                    </ul>
+                    <div class="price__descr">Вам нужно взять только спортивную форму, кроссовки и паспорт. Два полотенца и карту от шкафчика мы выдадим вам на рецепции.</div>
+                    <div class="price__value">1 000 руб.</div>
+                    <div class="price__buttons">
+                        <a href="" class="button button_price">Записаться</a>
+                    </div>
+                </div>
+            </div>
+        </div><!-- /.container -->
+    </section><!-- /.price -->
 
 
 
